@@ -1,5 +1,9 @@
 2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineEditor.cpp: 
+
+2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineEditor.xml: 
 
 2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
