@@ -1,5 +1,9 @@
 2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Clone.wrl: 
+
+2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* OutlineEditor.x3d:
 	* OutlineEditorGrid.x3dv: 
